# huggingface-datasets_PubLayNet

./: PubLayNet.py  README.md  pyproject.toml
.github/workflows/: push_to_hub.yaml
tests/: PubLayNet_test.py
