[tool.poetry]
name = "huggingface-datasets-publaynet"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datasets = { extras = ["vision"], version = "^2.14.6" }
pycocotools = "^2.0.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
black = "^23.10.1"
mypy = "^1.6.1"
pytest = "^7.4.2"
types-pillow = "^10.1.0.0"
types-pycocotools = "^2.0.0.4"
types-tqdm = "^4.66.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
